kubernetes/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 2

  selector:
    matchLabels:
      app: test

  template:
    metadata:
      labels:
        app: test

    spec:
      containers:
        - name: test
          image: talat74/test

          ports:
            - containerPort: 4000


---
apiVersion: v1
kind: Service
metadata:
  name: test-service

spec:
  type: ClusterIP

  selector:
    app: test

  ports:
    - port: 80
      targetPort: 4000
