kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata: 
  name: whisk-ingress

spec:
  rules:
    - http:
        paths:
          - path: /anotherwhisk
            pathType: Prefix
            backend:
              service:
                name: anotherwhisk-service
                port: 
                  number: 80

           - path: /test
             pathType: Prefix
             backend:
               service:
                 name: anotherwhisk-service
                 port: 
                   number: 80
